--- a/style.css
+++ b/style.css
@@ -7,7 +7,17 @@
 }
 
 body {
-  background-color: rgb(138, 43, 226);;
+  background-color: rgb(138, 43, 226);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.large-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .container {
@@ -15,12 +25,12 @@ body {
   flex-direction: column;
   align-items: center;
   margin: 100px;
-  justify-content: center;
 }
 
 .weaponContainer {
   display: flex;
-
+  align-items: center;
+  flex-grow: 1;
 }
 
 .score, 
@@ -31,6 +41,14 @@ p {
   align-items: center;
   justify-content: center;
   padding: 3px;
+}
+
+#announcer {
+  padding-top: 40px;
+  font-size: 26px;
+  font-weight: bold;
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
 
 .gameButton {
@@ -46,10 +64,49 @@ p {
 
 .header {
   display: flex;
-  justify-content: space-around;
-  padding: 18px;
+  justify-content: center;
+  align-items: center;
+  background-color: #1F2937;
+  padding: 15px;
+  flex-flow: column;
+  font-size: 25px;
+  font-style: bold;
 }
 
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  background-color: #1F2937;
+  color: #F9FAf8;
+  padding: 30px;
+}
 
+.subheader {
+  font-size: 16px;
+  margin-top: 16px;
+  font-style: italic;
+}
+
+.chosen {
+  transform: scale(1.2);
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
+}
+
+button {
+  transition: all .9s ease;
+}
+
+.playerWeapon,
+cpuWeapon {
+  padding: 10px;
+  display: flex; 
+  margin: 20px;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center;
+}
 
 
